--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
+@use "ngx-toastr/toastr" as *;
 @use "./styles/variables.scss" as *;
-@import "ngx-toastr/toastr";
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
@@ -7,12 +7,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
-
-html,
-body {
-    min-height: 100dvh;
-    min-width: 100dvw;
 }
 
 body {
